--- a/02-carousel.html
+++ b/02-carousel.html
@@ -24,7 +24,7 @@
 				<p class="testimonial-job">Senior Product Manager at EDP Comercia</p>
 			</blockquote>
 
-			<button class="btn">
+			<button class="btn btn--left">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					fill="none"
@@ -40,7 +40,7 @@
 					/>
 				</svg>
 			</button>
-			<button class="btn">
+			<button class="btn btn--right">
 				<svg
 					xmlns="http://www.w3.org/2000/svg"
 					fill="none"
@@ -56,6 +56,12 @@
 					/>
 				</svg>
 			</button>
+			<div class="dots">
+				<button class="dot dot--fill">&nbsp;</button>
+				<button class="dot">&nbsp;</button>
+				<button class="dot">&nbsp;</button>
+				<button class="dot">&nbsp;</button>
+			</div>
 		</div>
 	</body>
 </html>
